# Zen

./: CMakeLists.txt  LICENSE  README.md  TODO.md  log.txt
include/: CMakeLists.txt  Iris.hpp
scripts/: install_dependencies.sh
src/: BMPFileContent.hpp  BMPImage.cpp  BMPImage.hpp  CMakeLists.txt  Convolver.cpp  Convolver.hpp  Filters.cpp  Filters.hpp  ImageComponents.hpp  ImageProcessor.cpp  ImageProcessor.hpp  ImageReader.cpp  ImageReader.hpp  ImageWriter.cpp  ImageWriter.hpp  Matrix.cpp  Matrix.hpp  main.cpp
